--- a/templates/content/node--page--teaser.html.twig
+++ b/templates/content/node--page--teaser.html.twig
@@ -107,7 +107,7 @@
     </h3>
     {{ title_suffix }}
     <span class="content-card__arrow{% if target_new %} is-outbound{% endif %}">
-      {% include '@hdbt/misc/icon.twig' with {icon: 'arrow-right', label: 'Test label for the icon'|t } %}
+      {% include '@hdbt/misc/icon.twig' with {icon: (target_new)?'link-external':'arrow-right' } %}
     </span>
   </a>
 
