UHF-2879: Style 404, 403 and 401 pages, add illustrations for error and login pages and maintenance page, add preprocess check if we are on error page and add class to body is so

--- a/src/scss/layout/__index.scss
+++ b/src/scss/layout/__index.scss
@@ -3,6 +3,7 @@
 @import 'component';
 @import 'container';
 @import 'dialog-off-canvas-main-canvas';
+@import 'error-pages';
 @import 'footer';
 @import 'header-bottom';
 @import 'header-branding';
