--- a/src/scss/layout/_header-bottom.scss
+++ b/src/scss/layout/_header-bottom.scss
@@ -1,4 +1,6 @@
 .header-bottom {
+  background-color: $color-white;
+
   @include breakpoint($breakpoint-l) {
     border-bottom: 1px solid $color-black-20;
   }
