--- a/templates/layout/page--404.html.twig
+++ b/templates/layout/page--404.html.twig
@@ -1,18 +1,22 @@
 {% embed 'page.html.twig' %}
-  {% block page_before_content %}
-    {% embed '@hdbt/misc/container.twig' with {container_element: 'page-title'} %}
+  {% block page_content %}
+    {% embed '@hdbt/misc/container.twig' with {container_element: 'error-page-content'} %}
       {% block container_content %}
-        <div class="page-title">
-          <h1>404 - {{ 'Sorry, the page you were looking for was not found.'|t }}</h1>
+        <div class="error-page__text-container">
+          <div class="page-title">
+            <h1>404 - {{ 'Sorry, the page you were looking for was not found.'|t }}</h1>
+          </div>
+          <p class="error-page__description">{{ 'Check that you have typed in the page address correctly. We may have deleted or moved the content.'|t }}</p>
+          <a href="https://www.hel.fi/helsinki/en" class="error-page__link">{{ 'Go back to the hel.fi homepage'|t }} {% include '@hdbt/misc/icon.twig' with {icon: 'arrow-right'} %}</a><br/>
+          <a href="https://www.hel.fi/helsinki/en/administration/participate/feedback" class="error-page__link">{{ 'Give feedback'|t }} {% include '@hdbt/misc/icon.twig' with {icon: 'arrow-right'} %}</a>
+        </div>
+        <div class="error-page__illustration-container">
+          <img src="/themes/contrib/hdbt/src/images/illustration_error_page_404.svg" alt="" class="error-page__illustration" width="379" height="566" />
         </div>
       {% endblock container_content %}
     {% endembed %}
-  {% endblock page_before_content %}
-  {% block page_content %}
-    {% embed '@hdbt/misc/component.twig' with {container_element: 'error-content'} %}
-      {% block component_content %}
-        <p>{{ 'Check that you have typed in the page address correctly. We may have deleted or moved the content.'|t }}</p>
-      {% endblock component_content %}
-    {% endembed %}
   {% endblock page_content %}
+
+  {% block page_after_content %}
+  {% endblock page_after_content %}
 {% endembed %}
