UHF-3109: Fixed paragraph chart template.

--- a/templates/paragraphs/paragraph--chart.html.twig
+++ b/templates/paragraphs/paragraph--chart.html.twig
@@ -9,7 +9,7 @@
   %}
     {% block component_content %}
 
-      {{ content }}
+      {{ content.field_chart_chart }}
 
     {% endblock component_content %}
   {% endembed %}
