UHF-2879: Update translations to match casing on the hel.fi link, changed 403 template to reference 401 template, small css change

--- a/src/scss/layout/_error-pages.scss
+++ b/src/scss/layout/_error-pages.scss
@@ -70,7 +70,9 @@
     align-items: flex-start;
     display: flex;
     justify-content: center;
-    padding: $spacing-sextuple $spacing-triple 0 $spacing-triple;
+    padding-left: $spacing-triple;
+    padding-right: $spacing-triple;
+    padding-top: $spacing-sextuple;
     width: 50%;
   }
 }
