--- a/templates/layout/page--401.html.twig
+++ b/templates/layout/page--401.html.twig
@@ -4,7 +4,7 @@
       {% block container_content %}
         <div class="error-page__text-container">
           <div class="page-title">
-            <h1 class="error-page__title">403 - {{ 'You do not have permission to access this page'|t }}</h1>
+            <h1 class="error-page__title">{{ error_number|default('401') }} - {{ 'You do not have permission to access this page'|t }}</h1>
           </div>
           <p class="error-page__description">{{ 'This page is available to registered users only. If you have the necessary permissions, you can sign in to see the content.'|t }}</p>
           <a href="{{ error_page_home_link }}" class="error-page__link">{{ 'Go back to the hel.fi homepage'|t({}, {'context': 'Return to homepage link for error pages'}) }} {% include '@hdbt/misc/icon.twig' with {icon: 'arrow-right'} %}</a><br/>
