--- a/src/scss/components/paragraphs/_chart.scss
+++ b/src/scss/components/paragraphs/_chart.scss
@@ -1,15 +1,7 @@
-$_chart-aspect-ratio: 1.78; // 16/9
-
-.chart {
-  figure {
-    // Reset user-agent stylesheet rules for figure.
-    margin: 0;
-  }
-}
+$_chart-aspect-ratio: 16/9;
 
 .chart__container {
   height: 0;
-  margin: $spacing 0;
   padding-bottom: aspect-ratio-padding($_chart-aspect-ratio);
   position: relative;
   width: 100%;
@@ -22,4 +14,8 @@ $_chart-aspect-ratio: 1.78; // 16/9
     top: 0;
     width: 100%;
   }
+}
+
+.chart__transcript {
+  margin-top: $spacing;
 }
