UHF-3109: Added Cookie compliance message and content classes.

--- a/src/scss/components/content/_cookie-compliance.scss
+++ b/src/scss/components/content/_cookie-compliance.scss
@@ -77,7 +77,8 @@
 }
 
 .embedded-content-cookie-compliance,
-.react-and-share-cookie-compliance {
+.react-and-share-cookie-compliance,
+.helfi-charts-cookie-compliance {
   align-content: center;
   align-items: center;
   background-color: $color-black-5;
