--- a/src/scss/components/paragraphs/_chart.scss
+++ b/src/scss/components/paragraphs/_chart.scss
@@ -6,6 +6,7 @@ $_chart-aspect-ratio: 16/9;
   position: relative;
   width: 100%;
 
+  .helfi-charts-cookie-compliance,
   iframe {
     border: 0;
     height: 100%;
