UHF-3627: Add template, texts, translations and styling for maintenance page

--- a/src/scss/layout/__index.scss
+++ b/src/scss/layout/__index.scss
@@ -14,6 +14,7 @@
 @import 'layout-sidebar-first';
 @import 'lower-content';
 @import 'main-content';
+@import 'maintenance-page';
 @import 'paragraph-content';
 @import 'tools';
 @import 'wrapper';
