--- a/src/scss/06_components/block/_react-and-share.scss
+++ b/src/scss/06_components/block/_react-and-share.scss
@@ -86,6 +86,7 @@
               color: $color-black;
               display: flex;
               justify-content: center;
+              min-width: max-content;
               width: 100%;
 
               &:after {
