--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -10,19 +10,10 @@
 @import '02_mixins/_index';
 
 // /* Content is created after this point */
-// @import '03_generic/_index';
-// @import '04_elements/_index';
-// @import '05_objects/_index';
-
-// This is the old rendered CSS order with current directory structure
-@import '03_generic/colors';
-@import '03_generic/fonts';
-@import '03_generic/base';
+@import '03_generic/_index';
 @import '04_elements/_index';
-@import '05_objects/quote';
-@import '05_objects/link';
-@import '05_objects/button';
-@import '05_objects/icons/hdbt-icon';
+@import '05_objects/_index';
+
 
 //TODO: Why is this different from non-edit-mode?
 body.cke_editable {
