--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,55 +5,14 @@
 
 @import '~breakpoint-sass';
 
+// This folder structure is based loosely on ITCSS
 @import '00_functions/_index';
 @import '01_variables/_index';
 @import '02_mixins/_index';
 
 /* Content is created after this point */
-// @import '03_generic/_index';
-// @import '04_elements/_index';
-// @import '05_objects/_index';
-// @import "06_components/_index";
-// @import "07_utilities/_index";
-
-// This is the old rendered CSS order with current directory structure
-@import '03_generic/colors';
-@import '03_generic/fonts';
-@import '06_components/layout/_index';
-@import '07_utilities/_index';
-@import '03_generic/base';
+@import '03_generic/_index';
 @import '04_elements/_index';
-@import '06_components/block/_index';
-@import '05_objects/button';
-@import '06_components/pages/article';
-@import '06_components/pages/basic-page';
-@import '06_components/pages/cookie-compliance';
-@import '06_components/pages/errand-service';
-@import '06_components/pages/news-page';
-@import '05_objects/quote';
-@import '06_components/pages/service-channel';
-@import '06_components/pages/service';
-@import '06_components/pages/unit';
-@import '06_components/forms/_index';
-@import '05_objects/icons/_index';
-@import '06_components/logo';
-@import '06_components/media/image';
-@import '06_components/messages/announcement';
-@import '06_components/eu-cookie-compliance-banner';
-@import '06_components/gin-toolbar';
-@import '06_components/media/image-placeholder';
-@import '06_components/messages/system-messages';
-@import '06_components/throbber';
-@import '06_components/navigation/branding-navigation';
-@import '06_components/navigation/breadcrumb';
-@import '06_components/navigation/header-bottom-navigation';
-@import '06_components/navigation/header-top-navigation';
-@import '06_components/navigation/language-switcher';
-@import '05_objects/link';
-@import '06_components/navigation/local-tasks';
-@import '06_components/navigation/menu';
-@import '06_components/navigation/mobile-navigation';
-@import '06_components/navigation/sidebar-menu';
-@import '06_components/navigation/skip-to-main';
-@import '06_components/navigation/table-of-contents';
-@import '06_components/paragraphs/_index';
+@import '05_objects/_index';
+@import "06_components/_index";
+@import "07_utilities/_index";
