Fix import quotation marks to single quotes

--- a/src/scss/01_variables/_constraint_variables.scss
+++ b/src/scss/01_variables/_constraint_variables.scss
@@ -4,7 +4,7 @@
 //
 
 // Container width variables from HDS.
-@import "~hds-design-tokens/lib/breakpoint/container-width.scss";
+@import '~hds-design-tokens/lib/breakpoint/container-width.scss';
 
 $gutter: 16px;
 
