--- a/src/scss/06_components/__index.scss
+++ b/src/scss/06_components/__index.scss
@@ -7,7 +7,7 @@
 @import 'pages/_index';
 @import 'paragraphs/_index';
 
-@import "eu-cookie-compliance-banner";
-@import "gin-toolbar";
+@import 'eu-cookie-compliance-banner';
+@import 'gin-toolbar';
 @import 'logo';
-@import "throbber";
+@import 'throbber';
