--- a/src/scss/06_components/pages/__index.scss
+++ b/src/scss/06_components/pages/__index.scss
@@ -1,8 +1,8 @@
-@import "article";
-@import "basic-page";
-@import "cookie-compliance";
-@import "errand-service";
-@import "news-page";
-@import "service-channel";
-@import "service";
-@import "unit";
+@import 'article';
+@import 'basic-page';
+@import 'cookie-compliance';
+@import 'errand-service';
+@import 'news-page';
+@import 'service-channel';
+@import 'service';
+@import 'unit';
