--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -3,7 +3,7 @@
 // This file includes styling for WYSIWYG editor.
 //
 
-@import "~breakpoint-sass";
+@import '~breakpoint-sass';
 
 @import '00_functions/_index';
 @import '01_variables/_index';
