--- a/src/scss/00_functions/__index.scss
+++ b/src/scss/00_functions/__index.scss
@@ -1,5 +1,5 @@
-@import "deep-map-merge";
-@import "get";
-@import "aspect-ratio";
-@import "icon";
-@import "unit";
+@import 'deep-map-merge';
+@import 'get';
+@import 'aspect-ratio';
+@import 'icon';
+@import 'unit';
