--- a/src/scss/01_variables/_color_variables.scss
+++ b/src/scss/01_variables/_color_variables.scss
@@ -1,5 +1,5 @@
 // Color variables from HDS.
-@import "~hds-design-tokens/lib/color/all.scss";
+@import '~hds-design-tokens/lib/color/all.scss';
 
 $hdbt-color-black: var(--hdbt-color-black);
 $hdbt-color-white: #ffffff;
