--- a/src/scss/color-palette.scss
+++ b/src/scss/color-palette.scss
@@ -1,5 +1,5 @@
-@import "00_functions/_index";
-@import "01_variables/color_variables";
+@import '00_functions/_index';
+@import '01_variables/color_variables';
 
 // HELfi / HDBT Color palettes
 
