--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,5 +14,5 @@
 @import '03_generic/_index';
 @import '04_elements/_index';
 @import '05_objects/_index';
-@import "06_components/_index";
-@import "07_utilities/_index";
+@import '06_components/_index';
+@import '07_utilities/_index';
