--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -77,6 +77,10 @@
 
             {% set link_attributes = item_is_collabsible ? { 'id': link_id } : {} %}
 
+            {# Add menu__link class #}
+            {% set link_class = link_attributes['class'] ? link_attributes['class'] : [] %}
+            {% set link_attributes = link_attributes|merge({ 'class': link_class|merge(['menu__link'])}) %}
+
             {% if item.is_currentPage %}
               {% set link_attributes = link_attributes|merge({ 'aria-current': 'page' }) %}
             {% endif %}
@@ -95,7 +99,7 @@
               aria-labelledby="{{ link_id }}"
               aria-haspopup="true"
               class="menu__toggle-button">
-              {% include '@hdbt/misc/icon.twig' with {icon: 'angle-down'} %}
+              {% include '@hdbt/misc/icon.twig' with {icon: 'angle-down', class: 'menu__toggle-button-icon'} %}
             </button>
           {% endif %}
         </span>
