--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -65,25 +65,25 @@
       <li{{ item.attributes.addClass(item_classes) }}>
         <span class="menu__link-wrapper">
           {% if not item.is_nolink %}
-            {% set item_title %}
+            {% set item_title -%}
 
               {%- set icon_name = (item.url.getOption('attributes')).icon -%}
-              {% if icon_name %}
-                {% include '@hdbt/misc/icon.twig' with {icon: icon_name} %}
-              {% endif %}
 
-              <span class="menu__link__text">{{ item.title }}{{ explain_external_icon }}</span>
-            {% endset %}
+              {%- if icon_name -%}
+                {%- include '@hdbt/misc/icon.twig' with {icon: icon_name, class:'menu__link__icon'} -%}
+              {%- endif -%}<span class="menu__link__text">{{ item.title }}{{ explain_external_icon }}</span>
+            {%- endset %}
 
-            {% set link_attributes = item_is_collabsible ? { 'id': link_id } : {} %}
-
-            {# Add menu__link class #}
-            {% set link_class = link_attributes['class'] ? link_attributes['class'] : [] %}
-            {% set link_attributes = link_attributes|merge({ 'class': link_class|merge(['menu__link'])}) %}
-
-            {% if item.is_currentPage %}
-              {% set link_attributes = link_attributes|merge({ 'aria-current': 'page' }) %}
-            {% endif %}
+            {% set link_attributes = {
+              'class':
+                [
+                  'menu__link',
+                  item.in_active_trail ? 'menu__link--active-trail',
+                  item.is_external ? 'menu__link--external',
+                ],
+              'id': item_is_collabsible ? link_id,
+              'aria-current': item.is_currentPage ? 'page',
+            } %}
 
             {{ link(item_title, item.url, link_attributes) }}
 
